syntax = "proto3";

option csharp_namespace = "Verdure.Kame.DataTransmission";

package datatransmission;

// The greeting service definition.
service DataTransmissionGrpc {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc PlayVideoOnFaceScreen (FaceScreenFrameListRequest) returns (MsgReply);
  rpc PlayImageOnFaceScreen (FaceScreenFrameRequest) returns (MsgReply);
  rpc ControlQuadrupedPosture (QuadrupedRequest) returns (MsgReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message FaceScreenFrameRequest {
 bytes frameBuffer = 1;
}
message FaceScreenFrameListRequest {
	repeated FaceScreenFrameRequest faceScreenFrames = 1;
}

message MsgReply {
  string message = 1;
  int32 statusCode = 2;
}

message QuadrupedRequest{
	string ActionName = 1;
}